<resources>
    <string name="app_name">BookShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Магазин</string>
    <string name="favourites">Избранное</string>
    <string name="my_library">Моя библиотека</string>
    <string name="search">Найти книгу или автора</string>
    <string name="back">Назад</string>
</resources>