<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014f98"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.menu.MainMenuFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5">
        <TextView
            android:id="@+id/text_view_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="nickName"
            android:textColor="@color/black"
            android:paddingEnd="10dp"
            android:gravity="end"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,RtlSymmetry" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/library_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/lineLayout"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/buttonShop"
            android:text="@string/shop"
            android:background="@drawable/background_green_button"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/buttonFavourites"
            android:text="@string/favourites"
            android:background="@drawable/background_green_button"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/buttonMyLibrary"
            android:text="@string/my_library"
            android:background="@drawable/background_green_button"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>