<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014f98"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.menu.BoughtFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_library"
            android:gravity="center"
            android:paddingVertical="2dp"
            android:layout_margin="2dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/background_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:background="@drawable/background_gray"
            android:paddingVertical="7dp"
            android:layout_margin="5dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"
            android:inputType="text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_card_book_shop"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_back"/>
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:paddingHorizontal="40dp"
        android:background="@drawable/background_gray"
        android:backgroundTint="#BA6464"
        android:backgroundTintMode="multiply"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>